# parp-2025l

./: README.md  adventure.hs  adventure.st  knight_odyssey.pl
Haskell/: adventure.hs  game.cabal  odyssey.hs
Prolog/: knight_odyssey.pl
Smalltalk/: Dockerfile  build_and_run_game.sh  item.st  location.st  locations.st  main.st  player.st
