cabal-version:      2.4
name:               odyssey
version:            0.1.0.0

homepage:           
bug-reports:        
author:             zespol parp
maintainer:         mnlisows@gmail.com

build-type:         Simple
extra-source-files: README.md 
                    

executable gra-przygodowa
    main-is:          odyssey.hs

    hs-source-dirs:   . 
                      
    default-language: Haskell2010

    build-depends:    base >=4.12 && <5, 
                      
                      containers >=0.5 && <0.8, 
                      
                      mtl >=2.2 && <2.4,    
                     
                      random >=1.1 && <1.3
                     
    
    ghc-options:      -Wall -O2 
                     